New way to style using atomic css

--- a/config.toml
+++ b/config.toml
@@ -11,5 +11,11 @@ highlight_code = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
+taxonomies = [
+{name = "tags", rss = true}, # each tag will have its own RSS feed
+{name = "categories", paginate_by = 5},  # 5 items per page for a term
+{name = "authors"}, # Basic definition: no RSS or pagination
+]
+
 [extra]
 title = "lukecollier.dev"
