Taxonomies now exist for all pages

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
  "scripts": {
   "build": "gulp acss",
   "watch": "gulp watch & zola serve",
-  "sync": "gsutil rsync -d -r public gs://www.lukecollier.dev",
+  "sync": "gsutil rsync -r public gs://www.lukecollier.dev",
   "minify": "gulp minify"
  },
  "dependencies": {
