--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
  "license": "MIT",
  "private": true,
  "scripts": {
-  "build": "gulp acss && zola build",
+  "build": "gulp acss && zola build && gulp minify",
   "watch": "gulp watch & zola serve",
   "sync": "gsutil -m rsync -r public gs://www.lukecollier.dev",
   "minify": "gulp minify"
