--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/lukecollier.dev
     docker:
-      - image: circleci/node:9.9.0-stretch
+      - image: circleci/node:11.4.0
     steps:
       - checkout
       - run:
@@ -36,10 +36,10 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  build_and_deploy:
     jobs:
       - build
-      - test:
+      - deploy:
           requires:
             - build
           filters:
