--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build-html:
+  build:
     working_directory: ~/lukecollier.dev
     docker:
       - image: j1mc/docker-zola:0.8.0
@@ -16,6 +16,7 @@ jobs:
     docker:
       - image: circleci/node:11.4.0
     steps:
+      - checkout
       - run:
           name: Update npm
           command: 'sudo npm install -g npm@latest'
