--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  html:
+  build-html:
     working_directory: ~/lukecollier.dev
     docker:
       - image: j1mc/docker-zola:0.8.0
@@ -51,9 +51,11 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
+      - build-html
       - build
       - deploy:
           requires:
+            - build-html
             - build
           filters:
             branches:
