--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build-html:
     working_directory: ~/lukecollier.dev
     docker:
-      - image: j1mc/docker-zola:0.8.0
+      - image: j1mc/docker-zola:latest
     steps:
       - checkout
       - run:
