uses collierl/zola-alpine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build-html:
     working_directory: ~/lukecollier.dev
     docker:
-      - image: collierl/zola-alpine:0.0.4
+      - image: collierl/zola-alpine:0.0.5
     steps:
       - checkout
       - run:
@@ -11,6 +11,7 @@ jobs:
           command: 'zola build'
       - store_artifacts:
           path: ./public
+          destination: html
   build:
     working_directory: ~/lukecollier.dev
     docker:
@@ -34,18 +35,18 @@ jobs:
           command: npm run build:cd
       - store_artifacts:
           path: ./public
+          destination: css
   deploy:
     working_directory: ~/lukecollier.dev
     docker:
       - image: google/cloud-sdk
     steps:
-      - checkout
       - run:
           name: Sync to google
           command: | 
-                # echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-                # gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-                # gsutil -m rsync -r public gs://www.lukecollier.dev
+                echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+                gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+                gsutil -m rsync -r public gs://www.lukecollier.dev
 
 workflows:
   version: 2
