--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           name: Sync to google
           command: | 
                 echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
-                gcloud auth activate-service-account leccollier@gmail.com --key-file=${HOME}/gcloud-service-key.json
+                gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
                 gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
                 gsutil -m rsync -r public gs://www.lukecollier.dev
 
