--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,10 @@ jobs:
       - run:
           name: Build html
           command: 'zola build'
+			- persist_to_workspace:
+          root: /tmp
+          paths:
+            - public
       - store_artifacts:
           path: ./public
           destination: html
@@ -33,6 +37,10 @@ jobs:
       - run:
           name: Run build:cd 
           command: npm run build:cd
+			- persist_to_workspace:
+          root: /tmp
+          paths:
+            - public
       - store_artifacts:
           path: ./public
           destination: css
@@ -47,7 +55,7 @@ jobs:
                 echo $GCLOUD_SERVICE_KEY > ${HOME}/gcloud-service-key.json
                 gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
                 gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-                gsutil -m rsync -r public gs://www.lukecollier.dev
+                gsutil -m rsync -r /tmp/public gs://www.lukecollier.dev
 
 workflows:
   version: 2
