[ci] rsync the persisted public folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - image: google/cloud-sdk
     steps:
       - attach_workspace:
-          at: ~/lukecollier.dev
+          at: ~/lukecollier.dev/public
       - run:
           name: Sync to google
           command: | 
