[ci] now includes git config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,8 @@ jobs:
                 rm -rf ~/public/*
                 cp -r ~/lukecollier.dev/public/. ~/public
                 echo "www.lukecollier.dev" > ~/public/CNAME
+                git config --global user.email "leccollier@gmail.com"
+                git config --global user.name "lukecollier"
                 cd ~/public && git add . && git commit -m "todo: need a version number" && git push -f origin master
 
 workflows:
