--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
                 git clone https://lukecollier:${GITHUB_TOKEN}@github.com/lukecollier/lukecollier.github.io.git public
                 rm -rf ~/public/*
                 cp -r ~/lukecollier.dev/public/. ~/public
-                echo "www.lukecollier.dev" > ~/public/CNAME
+                echo "lukecollier.dev" > ~/public/CNAME
                 git config --global user.email "leccollier@gmail.com"
                 git config --global user.name "lukecollier"
                 cd ~/public && git add . && git commit -m "todo: need a version number" && git push -f origin master
