--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
  "scripts": {
   "build": "gulp acss && zola build && gulp minify",
   "build:cd": "gulp acss && gulp minify",
-  "watch": "gulp watch & zola serve",
+  "watch": "zola serve & gulp watch ",
   "minify": "gulp minify"
  },
  "dependencies": {
