--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
- "name": "lukecollier.dev",
- "version": "1.0.0",
- "description": "personal website",
- "repository": "git@github.com:lukecollier/lukecollier.dev.git",
- "author": "leccollier@gmail.com",
- "license": "MIT",
- "private": true,
- "scripts": {
-  "build": "gulp acss && zola build && gulp minify",
-  "build:cd": "gulp acss && gulp minify",
-  "watch": "zola serve & gulp watch ",
-  "minify": "gulp minify"
- },
- "dependencies": {
-  "gulp": "4.0.2",
-  "gulp-atomizer": "3.0.7",
-  "gulp-clean-css": "4.3.0"
- }
+  "name": "astro",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/tailwind": "^3.1.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "astro": "^2.1.7",
+    "autoprefixer": "^10.4.14",
+    "daisyui": "^2.51.5",
+    "fuse": "^0.4.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.0.24"
+  }
 }
