--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "astro": "^2.1.7",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.5",
+    "date-fns": "^2.29.3",
     "fuse": "^0.4.0",
+    "minimatch": "^7.4.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.0.24"
   }
