--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "fuse": "^0.4.0",
     "minimatch": "^7.4.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "vanjs-core": "^1.2.7",
+    "vanjs-jsx": "^0.1.0"
   }
 }
