--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "fuse": "^0.4.0",
     "minimatch": "^7.4.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.0.24",
-    "vanjs-core": "^1.2.7",
-    "vanjs-jsx": "^0.1.0"
+    "tailwindcss": "^3.0.24"
   }
 }
