--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: web-dist
-          path: dist
+          path: ./web/dist
 
   deploy:
     needs: build
